<resources>
    <string name="app_name">Cartilla de vacunación</string>
    <string name="title_activity_pet_list">PetListActivity</string>
    <string name="pet_list_activity_tittle">Mascotas</string>
    <string name="add_edit_pet_name">Nombre</string>
    <string name="add_edit_pet_kind">Especie</string>
    <string name="add_edit_pet_breed">Raza</string>
    <string name="add_edit_pet_sex">Sexo</string>
    <string name="add_edit_pet_birthday">Fecha de nacimiento</string>
    <string name="add_edit_pet_color">Color</string>
    <string name="add_edit_pet_particular_signs">Señas particulares</string>
    <string name="add_edit_pet_micro_chip">Micro Chip</string>
    <string name="add_edit_pet_tattoo">Tatuaje</string>
    <string name="add_edit_pet_owner">Propietario</string>
    <string name="add_edit_pet_add_button">Registrar</string>
    <string name="add_edit_pet_id_number">No. de identificación</string>
    <string name="add_edit_pet_error_null_value">El campo no puede estar vacio</string>
    <string name="add_edit_pet_no_owner">Debes seleccionar un propietario</string>
    <string name="add_edit_pet_add_owner">Agregar propietario</string>

    <string-array name="sex">
        <item>M</item>
        <item>F</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_edit_owner_address">Dirección</string>
    <string name="add_edit_owner_phone">Teléfono</string>
    <string name="add_edit_owner_first_name">Nombre</string>
    <string name="add_edit_owner_last_name">Apellido</string>
    <string name="add_pet_activity_tittle">Agregar Mascota</string>
    <string name="add_owner_activity_tittle">Agregar propietario</string>
    <string name="edit_owner_activity_tittle">Editar propietario</string>
    <string name="edit_pet_activity_tittle">Editar propietario</string>
    <string name="add_edit_owner_error_null_value">El campo no puede estar vacio</string>
    <string name="add_edit_owner_succesfull">Propietario agregado</string>
    <string name="add_edit_pet_succesfull">Mascota agregada</string>
    <string name="title_activity_pet_ifno">PetIfnoActivity</string>
    <string name="pet_info_pet_name">Nombre de la mascota:</string>
    <string name="pet_info_pet_kind">Especie:</string>
    <string name="pet_info_pet_sex">Sexo:</string>
    <string name="pet_info_pet_birthday">Fecha de nacimiento:</string>
    <string name="pet_info_pet_breed">Raza:</string>
    <string name="pet_info_pet_color">Color:</string>
    <string name="pet_info_pet_id_number">No. de identificación:</string>
    <string name="pet_info_pet_particular_signs">Señas particulares:</string>
    <string name="pet_info_pet_micro_chip">Micro chip:</string>
    <string name="pet_info_pet_tattoo">Tatuaje:</string>
    <string name="owner_info_owner_name">Propietario:</string>
    <string name="owner_info_owner_address">Dirección:</string>
    <string name="owner_info_owner_phone">Teléfono:</string>
    <string name="title_pet_section">Mascota</string>
    <string name="pet_info_activity_title">Información sobre %s</string>
    <string name="pet_info_not_given">No proporcionada</string>
    <string name="pet_info_yes">Sí</string>
    <string name="pet_info_no">No</string>
    <string name="title_vaccine_section">Vacunas</string>
    <string name="vaccine_info_application_date">Fecha de aplicación</string>
    <string name="vaccine_info_next_appointment_date">Siguiente aplicación</string>
    <string name="vaccine_info_new_vaccine">Agregar vacuna</string>
    <string name="title_activity_add_vaccine">AddVaccine</string>
    <string name="action_settings">Settings</string>
    <string name="add_vaccine_title">Agregar vacuna</string>
    <string name="add_vaccine_next_appointment">Siguiente cita</string>
    <string name="add_vaccine_date">Fecha de aplicación</string>
</resources>
