<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/input_margin"
    android:orientation="vertical"
    tools:context="com.magomtz.android.cartilla.pet.AddEditPetFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pet_name_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_pet_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pet_kind_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pet_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_pet_kind"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_pet_sex"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/pet_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_pet_birthday"
            android:textSize="18sp"
            android:textStyle="italic|bold"/>

        <CalendarView
            android:id="@+id/pet_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </CalendarView>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pet_breed_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pet_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_pet_breed"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
    android:id="@+id/txt_pet_color_layout"
    android:layout_marginLeft="@dimen/input_margin"
    android:layout_marginRight="@dimen/input_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/txt_pet_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_edit_pet_color"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pet_id_number_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pet_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_pet_id_number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pet_particular_signs_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pet_particular_signs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_pet_particular_signs"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:id="@+id/micro_chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_pet_micro_chip"
            android:textSize="18sp"
            android:textStyle=""
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            />

        <CheckBox
            android:id="@+id/pet_micro_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/micro_chip_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/tattoo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pet_micro_chip"
            android:text="@string/add_edit_pet_tattoo"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <CheckBox
            android:id="@+id/pet_tattoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tattoo_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_pet_owner"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/pet_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_pet_add_button"/>

</LinearLayout>
