<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/input_margin"
    android:orientation="vertical"
    tools:context="com.magomtz.android.cartilla.pet.AddEditPetFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_owner_first_name_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_owner_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_owner_first_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_owner_last_name_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_owner_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_owner_last_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_owner_address_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_owner_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_owner_address"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_owner_phone_layout"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_owner_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_owner_phone"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_pet_add_button"/>

</LinearLayout>
