<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/input_margin"
    android:orientation="vertical"
    tools:context="com.magomtz.android.cartilla.vaccine.addeditvaccine.AddVaccineFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_vaccine_date"
            android:textSize="18sp"
            android:textStyle="italic|bold"/>

        <CalendarView
            android:id="@+id/vaccine_application_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </CalendarView>

    </LinearLayout>

    <ImageView
        android:id="@+id/vaccine_ticket"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginBottom="@dimen/input_margin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="@dimen/input_margin"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_vaccine"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginRight="@dimen/input_margin"
        android:layout_marginTop="@dimen/input_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_vaccine_next_appointment"
            android:textSize="18sp"
            android:textStyle="italic|bold"/>

        <CalendarView
            android:id="@+id/vaccine_next_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </CalendarView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_pet_add_button"/>

</LinearLayout>
